# remat

./: .gitignore  Cargo.toml  output.mkv  premake5.lua
rust-v4l2-sys/: Cargo.toml  README.md
rust-v4l2-sys/src/: lib.rs
src/: camera.rs  compute.rs  main.cpp  main.rs  robot.rs  video.cpp  video.hpp  video.rs
src/camera/: camera.cpp  camera.hpp  internal.rs
src/robot/: callback.rs  commands.rs  event_loop.urscript  recipes.rs  rtde.rs  script.rs
