[package]
name = "remat"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.3"
ffmpeg-sys-next = "7.1.0"
nix = { version = "0.29.0", features = ["fs", "ioctl", "mman", "net"] }
strum = { version = "0.27.1", features = ["strum_macros"] }
strum_macros = "0.27.1"
tokio = { version = "1.44.1", features = ["full", "io-util", "net", "rt", "rt-multi-thread", "sync"] }
v4l2-sys = {path = "./rust-v4l2-sys"}
wgpu = "24.0.3"
zune-jpeg = "0.4.14"
